cloudexpo/src/objects/Country__c.object
<CustomObject>
    <description>Used to link countries to various objects in the application</description>
    <fields>
        <fullName>Deal_Reg_Interval__c</fullName>
        <defaultValue>120</defaultValue>
        <description>The number of days after which a deal reg expires for this country.</description>
        <label>Deal Reg Expiry Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Hardware_Implementation_Partner__c</fullName>
        <label>Default Hardware Implementation Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Apligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arvato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan IP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA IP NL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_License_Schedule_Deliver_To__c</fullName>
        <description>Use this value as default on insert order on field License Schedule Deliver To if similar field on Account object is empty.</description>
        <label>Default License Schedule Deliver To</label>
        <picklist>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Partner_Channel_Model__c</fullName>
        <description>Used to default the Partner Channel field on the account record</description>
        <label>Default Partner Channel Model</label>
        <picklist>
            <picklistValues>
                <fullName>Single tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-tier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EU_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Subscription_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the country is Subscription Billing Enabled</description>
        <inlineHelpText>Indicates that the country is Subscription Billing Enabled</inlineHelpText>
        <label>Enable Subscription Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expanded_Deal_Reg_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expanded Deal Reg Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_License_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export License Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Prohibited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Prohibited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISO_Code_2__c</fullName>
        <label>ISO Code 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <externalId>true</externalId>
        <label>ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Model__c</fullName>
        <label>Margin Model</label>
        <picklist>
            <picklistValues>
                <fullName>Base/Enhanced</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product Category</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Driven_Territory_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>When Partner Driven Territory is true, only Accounts/Opps with size BELOW this amount will be evaluated.</inlineHelpText>
        <label>Partner Driven Territory Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Driven_Territory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Territory Management will use Partner address when assigning Accounts and Opportunities related to this country.</inlineHelpText>
        <label>Partner Driven Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Industry_Threshold__c</fullName>
        <label>Partner Industry Threshold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Industry__c</fullName>
        <label>Partner Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education, Higher Ed/Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education, Primary/Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government, Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government, National/Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government, State/Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare-Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare-Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Types_for_Prod_Cat_Margin_Model__c</fullName>
        <inlineHelpText>Partner Types that are allowed to use &apos;Product Category&apos; Margin Model. The field can be left blank if Margin Model is not &apos;Product Category&apos;.</inlineHelpText>
        <label>Partner Types for Product Category Model</label>
        <picklist>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Partner</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <label>Special Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora_Country_Name__c</fullName>
        <description>This is a country name as is defined in the Zuora system. This is needed because some countries have slightly different names in Zuora and Salesforce.</description>
        <label>Zuora Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>twoTier_Calculation_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2-tier Calculation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>twoTier_NonUTM_Margin__c</fullName>
        <description>Distributor Margin % to apply on Classic products</description>
        <label>2-tier Non UTM Margin</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>twoTier_UTM_Margin__c</fullName>
        <description>Distributor Margin % to apply on UTM products</description>
        <label>2-tier UTM Margin</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>